--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_KEY=api_key=2e725a5440aea4857a11e1c44e07c69d
+VITE_API_KEY=api_key={Insert The API Key}
 VITE_API=https://api.themoviedb.org/3/movie/
 VITE_SEARCH=https://api.themoviedb.org/3/search/movie
 VITE_IMG=https://image.tmdb.org/t/p/w500/
